# file-pocket

./: README.md
back/: .gitignore  Dockerfile  compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt
back/file-pocket-back/: main.py  prepare.py
back/file-pocket-back/cleaner/: __init__.py  cleaner.py
back/file-pocket-back/web/: crud.py  database.py  dependencies.py  models.py  responses.py  routers.py
back/interfaces/: errors.go  file_repo.go  file_storage.go
back/models/: file.go
back/postgres/: database.go
back/postgres_repo/: compression.go  file_repo.go
back/service/: errors.go  file_service.go
back/src/: config.py  main.py  metadata.py
back/src/cleaner/: cleaner.py
back/src/web/: crud.py  database.py  dependencies.py  exceptions.py  responses.py  routers.py
back/tests/test_web/: test_crud.py  test_routers.py
back/tests/web/: test_crud.py
front/: package-lock.json  package.json
front/src/: App.js  index.js
front/src/components/: Block_Selection.js  Download.js  Footer.js  Header.js  Load.js  Main.js
front/src/styles/: Block_Selection.css  Form_Download_Load.css  Header.css  Main.css  index.css
